<resources>
    <string name="app_name">Furblr</string>
    <string name="title_home">Home</string>
    <string name="title_discover">Discover</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_go_back">Go Back</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="notification_favorited">%1$s favorited your post, %2$s</string>
    <string name="notification_shout">%1$s left a shout</string>
    <string name="notification_comment">%1$s commented on your post, %2$s</string>
    <string name="notification_comment_reply">%1$s replied to your commented on their post, %2$s</string>
    <string name="notification_watch">%1$s started watching you!</string>

    <string name="date_month_1">January</string>
    <string name="date_month_2">February</string>
    <string name="date_month_3">March</string>
    <string name="date_month_4">April</string>
    <string name="date_month_5">May</string>
    <string name="date_month_6">June</string>
    <string name="date_month_7">July</string>
    <string name="date_month_8">August</string>
    <string name="date_month_9">September</string>
    <string name="date_month_10">October</string>
    <string name="date_month_11">November</string>
    <string name="date_month_12">December</string>

    <string name="ui_discover_search_hint">whatcha ya lookin\' for?</string>
    <string name="ui_discover_title_order">Order the results by…</string>
    <string name="ui_discover_label_in">in</string>
    <string name="ui_discover_label_order">order</string>
    <string name="ui_discover_title_range">Include posts from…</string>
    <string name="ui_discover_title_ratings">Include posts rated…</string>
    <string name="ui_discover_title_kinds">Include these kinds of posts…</string>
    <string name="ui_discover_title_matching">Include matching keywords…</string>
    <string name="ui_discover_title_discover">Discover something new</string>
    <string name="ui_discover_section_submissions">Submissions</string>
    <string name="ui_discover_section_writing">Writing and Poetry</string>
    <string name="ui_discover_section_music">Music and Audio</string>
    <string name="ui_discover_section_crafting">Fursuiting and Crafting</string>

    <string name="ui_profile_about">About</string>
    <string name="ui_profile_gallery">Gallery</string>
    <string name="ui_profile_scraps">Scraps</string>
    <string name="ui_profile_favorites">Favorites</string>
    <string name="ui_profile_commissions">Commissions</string>

    <string name="sort_relevancy">Relevancy</string>
    <string name="sort_date">Date</string>
    <string name="sort_popularity">Popularity</string>
    <string name="sort_direction_asc">Ascending</string>
    <string name="sort_direction_desc">Descending</string>
    <string name="sort_window_1day">A Day</string>
    <string name="sort_window_3day">3 Days</string>
    <string name="sort_window_7day">A Week</string>
    <string name="sort_window_30day">A Month</string>
    <string name="sort_window_all">All Time</string>
    <string name="sort_rating_general">General</string>
    <string name="sort_rating_mature">Mature</string>
    <string name="sort_rating_adult">Adult</string>
    <string name="sort_post_kind_art">Art</string>
    <string name="sort_post_kind_music">Music</string>
    <string name="sort_post_kind_flash">Flash</string>
    <string name="sort_post_kind_story">Story</string>
    <string name="sort_post_kind_photo">Photo</string>
    <string name="sort_post_kind_poetry">Poetry</string>
    <string name="sort_matching_all">All of the words</string>
    <string name="sort_matching_any">Any of the words</string>
    <string name="sort_matching_extended">Extended</string>

    <string name="search_total_results">%d results found</string>
</resources>