<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/lblTitleSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@android:string/search_go"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblTitleSearch3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/ui_discover_title_discover"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOptions" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toStartOf="@+id/btnSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitleSearch">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ui_discover_search_hint"
            android:minLines="1"
            android:singleLine="false"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chgrpRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSearchRating">

            <com.google.android.material.chip.Chip
                android:id="@+id/chRatingGeneral"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_rating_general"
                app:checkedIconEnabled="false"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chRatingMature"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_rating_mature"
                app:checkedIconEnabled="false"
                app:checkedIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chRatingAdult"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_rating_adult"
                app:checkedIconEnabled="false"
                app:checkedIconVisible="true" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chgrpPostKinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSearchPostKinds">


            <com.google.android.material.chip.Chip
                android:id="@+id/chPostArt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_art" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chPostFlash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_flash" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chPostMusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_music" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chPostPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_photo" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chPostPoetry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_poetry" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chPostStory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:checked="true"
                android:text="@string/sort_post_kind_story" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:id="@+id/lblSearchCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_discover_title_order"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lblSearchRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_discover_title_range"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSortOrderBy" />

        <TextView
            android:id="@+id/lblSearchRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_discover_title_ratings"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSortRange" />

        <TextView
            android:id="@+id/lblSearchPostKinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_discover_title_kinds"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chgrpRatings" />

        <TextView
            android:id="@+id/lblSearchKeywords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ui_discover_title_matching"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chgrpPostKinds" />

        <Spinner
            android:id="@+id/spSortOrderBy"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:entries="@array/sortKinds"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSearchCriteria" />

        <Spinner
            android:id="@+id/spSortOrderBy2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:entries="@array/sortDirection"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/spSortOrderBy" />

        <Spinner
            android:id="@+id/spSortRange"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:entries="@array/sortRange"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSearchRange" />

        <Spinner
            android:id="@+id/spSortKeywords"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:entries="@array/sortMatching"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lblSearchKeywords" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/ui_discover_label_in"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/spSortOrderBy"
            app:layout_constraintStart_toEndOf="@+id/spSortOrderBy"
            app:layout_constraintTop_toTopOf="@+id/spSortOrderBy" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ui_discover_label_order"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="@+id/spSortOrderBy2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/spSortOrderBy2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/btnSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/btnShowOptions"
        app:layout_constraintTop_toTopOf="@+id/txtInputLayout"
        app:srcCompat="@drawable/ic_baseline_search_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/btnShowOptions"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSearch"
        app:srcCompat="@drawable/ic_baseline_expand_more_24"
        tools:ignore="SpeakableTextPresentCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>