<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.itreallyiskyler.furblr.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.itreallyiskyler.furblr.ui.discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_marketplace" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.itreallyiskyler.furblr.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_marketplace"
        android:name="com.itreallyiskyler.furblr.ui.marketplace.MarketplaceFragment"
        android:label="@string/title_marketplace"
        tools:layout="@layout/fragment_marketplace" />
</navigation>